	compatibility definitions.

	* Globally remove HAVE_STDINT_H.

	* libfreeipmi/include/: Various header file cleanup.

	* Applied FreeBSD OpenIPMI support patch from Dmitry Frolov
	<frolov at riss-telecom dot ru>.

	* configure.ac: Search for linux/ipmi.h and sys/ipmi.h.

	* libfreeipmi/src/ipmi-openipmi-api.c: Load and use appropriate
	headers when available.
	
2006-12-15  Anand Babu  <ab@zresearch.com>

	* libfreeipmi/include/: g++ compatibility definitions.

2006-12-12  Albert Chu <chu11@llnl.gov>

	* Applied FreeBSD support patch from Dmitry Frolov <frolov at
	riss-telecom dot ru>.

	* freeipmi.spec.in: Added zresearch copying and disclaimer files.
	
2006-12-08  Anand Babu  <ab@zresearch.com>

	* common/src/ipmi-sdr-api.c: fixes the "SDR cache creation under
	/tmp" bug reported by Tejram Meena <tejram@in.niksun.com>.

	* ipmi-sensors/src/ipmi-sensors.c: give proper error message when
	cache creation fails.

	* DISCLAIMER.ZRESEARCH and COPYING.ZRESEARCH: newly added.

	* libfreeipmi/src/ipmi-rmcpplus-debug.c
	(ipmi_dump_rmcpplus_packet): initialized certain variables to zero
	to avoid GCC warning.

2006-12-07  Albert Chu <chu11@llnl.gov>

	* common/src/argp-common.h, common/src/argp-common.c,
	common/doc/argp-common-outofband.man: Support -P option.  Remove
	optional argument of -p due to parsing issues.

	* ipmipower/ipmipower.8.in, ipmipower/src/ipmipower_config.c
	(ipmipower_config_cmdline_parse, _usage): Replace -P option with
	-W option.  Support new -P password prompt option.

	* ipmiconsole/ipmiconsole.8.in,
	ipmiconsole/src/ipmiconsole_config.c (_cmdline_parse, _usage):
	Support -P option.

	* ipmiconsole/libipmiconsole.3.in: New file.

	* configure.ac, ipmiconsole/Makefile.am, freeipmi.spec.in: Support
	new manpage.
	
2006-12-06  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/error.c (dbg): Do not compile if debugging is not
	compiled in.

	* ipmipower/src/ipmipower_powercmd.c (ipmipower_powercmd_queue),